WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279136
[WASM] Fix arrayNewElem with additional new element size check
https://bugs.webkit.org/show_bug.cgi?id=279136
Summary
[WASM] Fix arrayNewElem with additional new element size check
Yijia Huang
Reported
2024-09-04 12:26:32 PDT
<
rdar://134712862
>
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-09-04 12:30:15 PDT
Pull request:
https://github.com/apple/WebKit/pull/1692
Yijia Huang
Comment 2
2024-09-04 12:41:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33131
EWS
Comment 3
2024-09-05 09:16:21 PDT
Committed
283214@main
(0ebea356d54d): <
https://commits.webkit.org/283214@main
> Reviewed commits have been landed. Closing PR #33131 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug