[WASM] Fix arrayNewElem with additional new element size check https://bugs.webkit.org/show_bug.cgi?id=279136 rdar://134712862

Reviewed by Yusuke Suzuki.

When creating a new element array, we should check the new element size
against the maximum array size.

* Source/JavaScriptCore/wasm/WasmOperationsInlines.h:
(JSC::Wasm::arrayNewElem):

Canonical link: https://commits.webkit.org/283214@main